# mtp-tiny-database-client

./: CMakeLists.txt  DBMainManager.cpp  DBMainManager.h  DataProcessingAnalytic.cpp  DataProcessingAnalytic.h  DataProcessingBasic.cpp  DataProcessingBasic.h  DataProcessingEvent.cpp  DataProcessingEvent.h  DataProcessingVMS.cpp  DataProcessingVMS.h  Dockerfile.aarch64  Dockerfile.x86  EventBase.cpp  EventBase.h  EventsModelCCTV.cpp  EventsModelCCTV.h  IDBMSClient.h  IDataProcessing.h  IDbClient.h  Jenkinsfile  PostgreSQLClient.cpp  PostgreSQLClient.h  README.md  RequestParser.cpp  RequestParser.h  SOCIDBClient.cpp  SOCIDBClient.h  SQLite3Client.cpp  SQLite3Client.h  build-aarch64_psql.sh  build-aarch64_sqlite3.sh  build-x86_psql.sh  build-x86_sqlite3.sh  docker-export_aarch64_psql.sh  docker-export_aarch64_sqlite3.sh  docker-export_x86_psql.sh  docker-export_x86_sqlite3.sh  main.cpp
configurations/: logger.conf
constraints/: constraint.json
preinstall/mtp-db/: db_dump  install_postgres_db.sh  pg_hba.conf  postgresql.conf
templates/: template.json
